force-app/main/default/objects/Country__c/fields/Country_2_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_2_Code__c</fullName>
    <externalId>true</externalId>
    <label>Country 2 Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>