force-app/main/default/objects/Country__c/fields/Country_3_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_3_Code__c</fullName>
    <label>Country 3 Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>