force-app/main/default/objects/Country__c/fields/Regional_Bloc_Name__c.field-meta.xml
<CustomField>
    <fullName>Regional_Bloc_Name__c</fullName>
    <label>Regional Bloc Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>